<resources>
    <string name="app_name">Unipi City Vibe</string>

    <string name="login_welcome">Welcome!\nEnter your full name to continue.</string>
    <string name="login_hint_name">Full Name</string>
    <string name="login_button">ENTER</string>
    <string name="error_empty_name">Please enter your full name</string>

    <string name="events_loading">Loading events...</string>
    <string name="events_empty">No events found.</string>

    <string name="settings_title">Settings</string>
    <string name="settings_user_info">User Information</string>
    <string name="settings_app_prefs">App Preferences</string>
    <string name="settings_font_size">Font Size:</string>
    <string name="settings_font_small">Small</string>
    <string name="settings_font_normal">Normal</string>
    <string name="settings_font_large">Large</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_dark_mode">Dark Mode</string>
    <string name="settings_save_btn">SAVE</string>
    <string name="settings_saved_toast">Settings saved!</string>

    <string name="details_description">Description:</string>
    <string name="details_price">Price:</string>
    <string name="details_book_hint">Booking Name</string>
    <string name="details_book_btn">BOOK TICKET</string>
    <string name="details_booking_progress">Booking...</string>
    <string name="details_success_toast">Booking completed!</string>

    <string name="notification_title">You are near an event!</string>
    <string name="notification_body_start">The event</string>
    <string name="notification_body_end">is near you!</string>
</resources>